--- a/backend/WinHackNZ/WinHackNZ/bin/WinHackNZ.dll.config
+++ b/backend/WinHackNZ/WinHackNZ/bin/WinHackNZ.dll.config
@@ -12,7 +12,9 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WinHackNZ-20160730112357.mdf;Initial Catalog=aspnet-WinHackNZ-20160730112357;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="DataStoreSwitch" value="STUB"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5">
