Added intial external service call and unit test

--- a/backend/WinHackNZ/WinHackNZ/WinHackNZ.csproj
+++ b/backend/WinHackNZ/WinHackNZ/WinHackNZ.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -205,6 +206,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\DataStore.cs" />
+    <Compile Include="Helper\ExternalServices.cs" />
     <Compile Include="Helper\RestClient.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
