Adding the external datasources from IBM

--- a/backend/WinHackNZ/WinHackNZ/WinHackNZ.csproj
+++ b/backend/WinHackNZ/WinHackNZ/WinHackNZ.csproj
@@ -197,16 +197,16 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CrimeController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\DataController.cs" />
+    <Compile Include="Controllers\QueryEngine.cs" />
     <Compile Include="Controllers\SafetyController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\DataStore.cs" />
     <Compile Include="Helper\ExternalServices.cs" />
+    <Compile Include="Helper\PersonalValues.cs" />
     <Compile Include="Helper\RestClient.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
